--- a/style.scss
+++ b/style.scss
@@ -57,10 +57,12 @@ h2 {
 
 h3 {
   font-size: 20px;
+  margin: 1em 0 10px;
 }
 
 h4 {
   font-size: 18px;
+  margin: 1em 0 10px;
   color: $gray;
 }
 
