Add tags to posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@
 
     {% include meta.html %}
 
+    {% if site.tags != "" %}
+      {% include tags.html %}
+    {% endif %}
+
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
