--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,13 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
 
+  <span>[
+    {% for tag in page.tags %}
+      {% capture tag_name %}{{ tag }}{% endcapture %}
+      <a href="/_tags/ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+    {% endfor %}
+  ]</span>
+
   <div class="entry">
     {{ content }}
   </div>
