--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,10 +8,10 @@ layout: default
   <span>[
     {% for tag in page.tags %}
       {% capture tag_name %}{{ tag }}{% endcapture %}
-      <a href="/_tags/ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+      <a href="/_tags/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
     {% endfor %}
   ]</span>
-
+  
   <div class="entry">
     {{ content }}
   </div>
