--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="post">
-    <h1>Tag: {{ page.tag }}</h1>
+    <h1>tag: {{ page.tag }}</h1>
     <ul>
         {% for post in site.tags[page.tag] %}
         <li>
