--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,16 +20,16 @@ layout: default
       {%- if page.author -%}
         • {% for author in page.author %}
           <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-            <span class="p-author h-card" itemprop="name">{{ author }}</span></span>
+            <span class="p-author h-card" itemprop="name">{{ author.name }}</span></span>
             {%- if forloop.last == false %}, {% endif -%}
         {% endfor %}
       {%- endif -%}</p>
-      <span style="font-size: 0.8em;">[
+      <span style="font-size: 0.8em;">
         {% for tag in page.tags %}
           {% capture tagname %}{{ tag }}{% endcapture %}
           <a href="/tags/{{ tagname }}"><code class="highligher-rouge"><nobr>{{ tagname }}</nobr></code>&nbsp;</a>
         {% endfor %}
-      ]</span>
+      </span>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
