--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,19 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-    <a href="{{ site.baseurl }}/" class="site-logo"><img src="{{ site.logo }}" /></a>
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+
+    <div class="wrapper-masthead">
+      <div class="container">
+        <header class="masthead clearfix">
+          <a href="{{ site.baseurl }}/" class="site-logo"><img src="{{ site.logo }}" /></a>
+
+          <div class="site-info">
+            <h1 class="site-title"><a rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h1>
+            <p class="site-subtitle">{{ site.subtitle }}</p>
+          </div>
+        </header>
+      </div>
+    </div>
 
     {%- if titles_size > 0 -%}
       <nav class="site-nav">
