--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,10 +1,25 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 
+// .masthead
+
+.wrapper-masthead {
+    margin-bottom: 50px;
+  }
+  
+.masthead {
+    padding: 20px 0;
+    border-bottom: 1px solid $lightGray;
+
+    @include mobile {
+        text-align: center;
+    }
+}
+
 .site-logo {
     float: left;
-    width: 70px;
-    height: 70px;
+    width: 48px;
+    height: 48px;
     margin-right: 15px;
 
     @include mobile {
@@ -15,5 +30,35 @@
 
     img {
         border-radius: 5px;
+    }
+}
+
+.site-info {
+    float: left;
+
+    @include mobile {
+        float: none;
+        display: block;
+        margin: 0 auto;
+    }
+}
+
+.site-title {
+    margin: 0;
+    color: $darkGray;
+    cursor: pointer;
+    font-family: $helveticaN;
+    font-weight: 300;
+    font-size: 28px;
+    letter-spacing: 1px;
+}
+
+.site-subtitle {
+    margin: -5px 0 0 0;
+    color: $gray;
+    font-size: 16px;
+
+    @include mobile {
+        margin: 3px 0;
     }
 }
