--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
           <a href="{{ site.baseurl }}/" class="site-logo"><img src="{{ site.logo }}" /></a>
 
           <div class="site-info">
-            <h1 class="site-title"><a rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h1>
-            <p class="site-subtitle">{{ site.subtitle }}</p>
+            <h1 class="site-name"><a rel="author" href="{{ "/" | relative_url }}">{{ site.name }}</a></h1>
+            <p class="site-underline">{{ site.underline }}</p>
           </div>
         </header>
       </div>
