--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,15 +1,27 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 
+// Nicolas Gallagher's micro clearfix hack
+// http://nicolasgallagher.com/micro-clearfix-hack/
+
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
 // .masthead
 
 .wrapper-masthead {
-    margin-bottom: 50px;
+    margin-bottom: 16px;
   }
-  
+
 .masthead {
-    padding: 20px 0;
-    border-bottom: 1px solid $lightGray;
+    padding: 8px 0;
 
     @include mobile {
         text-align: center;
@@ -20,7 +32,7 @@
     float: left;
     width: 48px;
     height: 48px;
-    margin-right: 15px;
+    margin-right: 16px;
 
     @include mobile {
         float: none;
@@ -43,19 +55,13 @@
     }
 }
 
-.site-title {
+.site-name {
     margin: 0;
-    color: $darkGray;
     cursor: pointer;
-    font-family: $helveticaN;
-    font-weight: 300;
-    font-size: 28px;
-    letter-spacing: 1px;
 }
 
-.site-subtitle {
+.site-underline {
     margin: -5px 0 0 0;
-    color: $gray;
     font-size: 16px;
 
     @include mobile {
