--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,32 +1,25 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 
-// Nicolas Gallagher's micro clearfix hack
-// http://nicolasgallagher.com/micro-clearfix-hack/
+%clearfix:before,
+%clearfix:after {
+    content: " ";
+    display: table;
+}
 
-// .clearfix:before,
-// .clearfix:after {
-//     content: " ";
-//     display: table;
-// }
+%clearfix:after {
+    clear: both;
+}
 
-// .clearfix:after {
-//     clear: both;
-// }
-
-// .masthead
-
-// .wrapper-masthead {
-//     margin-bottom: 16px;
-//   }
-
-// .masthead {
-//     padding: 8px 0;
-
-//     @include mobile {
-//         text-align: center;
-//     }
-// }
+.site-header {
+    // border-top: 5px solid $border-color-03;
+    // border-bottom: 1px solid $border-color-01;
+    // min-height: $spacing-unit * 1.865;
+    line-height: $base-line-height * $base-font-size * 2;
+  
+    // Positioning context for the mobile navigation icon
+    // position: relative;
+}
 
 .site-logo {
     float: left;
