--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -23,8 +23,9 @@
 
 .site-logo {
     float: left;
-    width: 48px;
-    height: 48px;
+    width: 96px;
+    height: 96px;
+    margin-top: 16px;
     margin-right: 16px;
 
     @include mobile {
@@ -53,11 +54,12 @@
     cursor: pointer;
 }
 
+p.site-underline {
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+}
 .site-underline {
-    margin: -5px 0 0 0;
-    font-size: 16px;
-
-    @include mobile {
+     @include mobile {
         margin: 3px 0;
     }
 }
