--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
     <a href="{{ site.baseurl }}/" class="site-logo"><img src="{{ site.logo }}" /></a>
 
     <div class="site-info">
-      <h1 class="site-name"><a rel="author" href="{{ "/" | relative_url }}">{{ site.name }}</a></h1>
+      <h1 class="site-name"><a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h1>
       <p class="site-underline">{{ site.underline }}</p>
     </div>
 
