--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -12,7 +12,7 @@
 }
 
 .site-header {
-    // border-top: 5px solid $border-color-03;
+    border-top: 5px solid $border-color-01;
     // border-bottom: 1px solid $border-color-01;
     // min-height: $spacing-unit * 1.865;
     line-height: $base-line-height * $base-font-size * 2;
@@ -23,9 +23,9 @@
 
 .site-logo {
     float: left;
-    width: 96px;
-    height: 96px;
-    margin-top: 16px;
+    width: 64px;
+    height: 64px;
+    margin-top: 8x;
     margin-right: 16px;
 
     @include mobile {
@@ -54,12 +54,11 @@
     cursor: pointer;
 }
 
-p.site-underline {
-    margin-block-start: 0.5em;
-    margin-block-end: 0.5em;
-}
 .site-underline {
      @include mobile {
         margin: 3px 0;
     }
+}
+p.site-underline {
+    padding: 8px 0;
 }
