--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -50,17 +50,15 @@
 }
 
 .site-name {
-    margin: 0;
     cursor: pointer;
 }
 
-h1.site-name{
-    margin-block-start: 0.36em;
-    margin-block-end: 0.36em;
+p.site-name {
+    margin: 0;
 }
 
 .site-underline {
-    margin: 0;
+    margin: -16px 0 0 0;
 
      @include mobile {
         margin: 3px 0;
