--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -25,8 +25,8 @@
     float: left;
     width: 64px;
     height: 64px;
-    margin-top: 16x;
-    margin-right: 16px;
+    margin-top: 15px;
+    margin-right: 15px;
 
     @include mobile {
         float: none;
@@ -41,6 +41,7 @@
 
 .site-info {
     float: left;
+    margin-top: 15px;
 
     @include mobile {
         float: none;
@@ -53,14 +54,14 @@
     cursor: pointer;
 }
 
-p.site-name {
-    margin: 0;
+h1.site-name {
+    margin-bottom: 0;
 }
 
 .site-underline {
-    margin: -16px 0 0 0;
+    margin-top: -15px;
 
-     @include mobile {
+    @include mobile {
         margin: 3px 0;
     }
 }
