--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -65,3 +65,9 @@ h1.site-name {
         margin: 3px 0;
     }
 }
+
+.site-nav {
+    @media screen and (min-width: $on-medium) {
+        margin-top: 15px;
+    }
+  }
