Update footer.html with tagcloud

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,7 @@
       </div>
       <div class="footer-col">
         <p>{{ site.description | escape }}</p>
+        <p>{% include tagcloud.html %}</p>
       </div>
     </div>
 
