Reorganized categories like tags

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -13,6 +13,12 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
+<!-- Include categories -->
+{% if site.categories != "" %}
+  {% include categories.html %}
+{% endif %}
+
+<!-- Include tags -->
 {% if site.tags != "" %}
   {% include tags.html %}
 {% endif %}
