Added category cloud

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,8 @@
       <div class="footer-col">
         <h2>Need some help?</h2>
         <p>{{ site.description | escape }}</p>
+        <!-- Include categories and tags -->
+        <p>{% include categorycloud.html %}</p>
         <p>{% include tagcloud.html %}</p>
       </div>
     </div>
