--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,13 +32,14 @@ layout: default
                 {{ post.title | escape }}
               </a>
             </h3>
-            <!-- <span class="tag-links">
-              {% for tag in post.tags %}
-                {% capture tagname %}{{ tag }}{% endcapture %}
-                <a class="tag-link" href="/tags/{{ tagname }}"><code class="highligher-rouge"><nobr>{{ tagname }}</nobr></code></a>
+            <!-- Include categories -->
+            <span class="tag-links">
+              {% for category in post.categories %}
+                {% capture categoryname %}{{ category }}{% endcapture %}
+                <a class="tag-link" href="/categories/{{ categoryname | downcase }}"><code class="highligher-rouge"><nobr>{{ categoryname }}</nobr></code></a>
               {% endfor %}
-            </span> -->
-          </div>    
+            </span>
+          </div>
             {%- if site.show_excerpts -%}
               {{ post.excerpt }}
             {%- endif -%}
