--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -21,7 +21,7 @@ layout: default
 </div> -->
 
 <div id="archives">
-    <h1>category: {{ page.category }}</h1>
+    <h1>category: {{ page.category | replace: "-", " " }}</h1>
     <ul>
         {% for post in site.categories[page.category] %}
         <li>
