--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@ layout: default
             <span class="tag-links">
               {% for category in post.categories %}
                 {% capture categoryname %}{{ category }}{% endcapture %}
-                <a class="tag-link" href="/categories/{{ categoryname | downcase }}"><code class="highligher-rouge"><nobr>{{ categoryname }}</nobr></code></a>
+                <a class="tag-link" href="/categories/{{ categoryname | downcase }}"><code class="highligher-rouge"><nobr>{{ categoryname | replace: "-", "" }}</nobr></code></a>
               {% endfor %}
             </span>
           </div>
