--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,7 @@ layout: default
               </a>
             </h3>
             <!-- Include categories -->
-            <span class="tag-links">
+            <span class="tag-links">Category: 
               {% for category in post.categories %}
                 {% capture categoryname %}{{ category }}{% endcapture %}
                 <a class="tag-link" href="/categories/{{ categoryname | downcase }}"><code class="highligher-rouge"><nobr>{{ categoryname | replace: "-", " " }}</nobr></code></a>
