Fixed two-worded categories (#6)
* Updated category types
* Updated tag types
* Fixed displazing category name w/ liquid replace: "-", " "
* Update page titles
* Update tags page title
* Updated category misc to miscellaneous
* Added category snippets
* Added tag github-pages
* Added new category 'Microsoft 365'
* Did some content improvements

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,10 +33,10 @@ layout: default
               </a>
             </h3>
             <!-- Include categories -->
-            <span class="tag-links">
+            <span class="tag-links">Category: 
               {% for category in post.categories %}
                 {% capture categoryname %}{{ category }}{% endcapture %}
-                <a class="tag-link" href="/categories/{{ categoryname | downcase }}"><code class="highligher-rouge"><nobr>{{ categoryname }}</nobr></code></a>
+                <a class="tag-link" href="/categories/{{ categoryname | downcase }}"><code class="highligher-rouge"><nobr>{{ categoryname | replace: "-", " " }}</nobr></code></a>
               {% endfor %}
             </span>
           </div>
