--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
       <span class="tag-links">
         {% for tag in page.tags %}
           {% capture tagname %}{{ tag }}{% endcapture %}
-          <a class="tag-link" href="/tags/{{ tagname }}"><code class="highligher-rouge"><nobr>{{ tagname }}</nobr></code></a>
+          <a class="tag-link" href="/tags/{{ tagname }}"><code class="highligther-rouge"><nobr>{{ tagname }}</nobr></code></a>
         {% endfor %}
       </span>
   </header>
