--- a/_includes/tagcloud.html
+++ b/_includes/tagcloud.html
@@ -8,5 +8,5 @@
 {% for temptag in sortedtemptags %}
   {% assign tagitems = temptag | split: '#' %}
   {% capture tagname %}{{ tagitems[1] }}{% endcapture %}
-  <a class="tag-link" href="/tags/{{ tagname }}"><code class="highligher-rouge"><nobr>{{ tagname }}</nobr></code></a>
+  <a class="tag-link" href="/tags/{{ tagname }}"><code class="highligther-rouge"><nobr>{{ tagname }}</nobr></code></a>
 {% endfor %}
