Fixed parent code.highlighter-rouge style

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -21,8 +21,8 @@ a {
     font-size: 0.9em;
 }
 .category-link {
-      
-    .highlighter-rouge & {
+    
+    code.highlighter-rouge & {
         background: none;
     }
 }
