--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -20,11 +20,8 @@ a {
 .category-links {
     font-size: 0.9em;
 }
-.category-link {
-    
-    code.highlighter-rouge & {
-        background: none;
-    }
+.category-link > code.highligther-rouge {
+    background: none;
 }
 
 .post-list-header {
