--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,14 @@ layout: default
             {%- if forloop.last == false %}, {% endif -%}
         {% endfor %}
       {%- endif -%}</p>
+      <!-- Include categories -->
+      <span class="category-links"> 
+        {% for category in page.categories %}
+          {% capture categoryname %}{{ category }}{% endcapture %}
+          <a class="category-link" href="/categories/{{ categoryname | downcase }}"><code class="highligther-rouge"><nobr>{{ categoryname | replace: "-", " " }}</nobr></code></a>
+        {% endfor %}
+      </span>      
+      <!-- Include tags -->
       <span class="tag-links">
         {% for tag in page.tags %}
           {% capture tagname %}{{ tag }}{% endcapture %}
