Update gategory background color

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -21,21 +21,21 @@ a {
     font-size: 0.9em;
 }
 
-.category-link {
-    color: #fdfdfd;
+// .category-link {
+//     color: #fdfdfd;
     
-    &:visited {
-        color: #fdfdfd;
-    }
+//     &:visited {
+//         color: #fdfdfd;
+//     }
     
-    &:hover {
-        color: #fdfdfd;
-        text-decoration: none;
-    }
-}
+//     &:hover {
+//         color: #fdfdfd;
+//         text-decoration: none;
+//     }
+// }
 
 .category-link > code.highligther-rouge {
-    background: #1b79b0;
+    background: #6ab0d8;
 }
 
 .post-list-header {
