--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,6 +1,24 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 
+// Light mode
+$lm-category-background-color: #e2f5ff;
+// dark mode
+$dm-category-background-color: #26536a;
+
+// Mode selection
+$category-background-color: $lm-category-background-color;
+
+@if $color-scheme-auto {
+    // Do nothing
+} @else if $color-scheme-dark {
+
+    $category-background-color: $dm-category-background-color;
+
+}@else {
+    // Nothing to do here
+}
+
 a {
     text-decoration: underline;
 }
@@ -35,7 +53,7 @@ a {
 // }
 
 .category-link > code.highligther-rouge {
-    background: #6ab0d8;
+    background: $category-background-color;
 }
 
 .post-list-header {
