--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -7,10 +7,15 @@ $lm-category-background-color: #e2f5ff;
 $dm-category-background-color: #26536a;
 
 // Mode selection
+// Classic skin (always light mode)
 $category-background-color: $lm-category-background-color;
 
 @if $color-scheme-auto {
-    // Do nothing
+
+    @media (prefers-color-scheme: dark) {
+        $category-background-color: $dm-category-background-color;
+    }
+
 } @else if $color-scheme-dark {
 
     $category-background-color: $dm-category-background-color;
