--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -12,13 +12,15 @@ $category-background-color: $lm-category-background-color;
 
 @if $color-scheme-auto {
 
+    $my-category-background-color: #{$lm-category-background-color};
+
     @media (prefers-color-scheme: dark) {
-        $category-background-color: $dm-category-background-color;
+        $my-category-background-color: #{$dm-category-background-color};
     }
 
 } @else if $color-scheme-dark {
 
-    $category-background-color: $dm-category-background-color;
+    $category-background-color: var($my-category-background-color);
 
 }@else {
     // Nothing to do here
