Try scss dark mode fro category style

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -18,9 +18,11 @@ $category-background-color: $lm-category-background-color;
         $my-category-background-color: #{$dm-category-background-color};
     }
 
+    $category-background-color: var($my-category-background-color);
+
 } @else if $color-scheme-dark {
 
-    $category-background-color: var($my-category-background-color);
+    $category-background-color: $dm-category-background-color;
 
 }@else {
     // Nothing to do here
