--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 
     <div class="site-info">
       <h1 class="site-name"><a rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h1>
-      <p class="site-underline">{{ site.underline }}</p>
+      <p class="site-subtitle">{{ site.subtitle }}</p>
     </div>
 
     {%- if titles_size > 0 -%}
