--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
             <li class="p-name">{{ site.author.name | escape }}</li>
           {% endif -%}
           {% if site.author.email -%}
-            <li><a class="u-email" href="mailto:{{ site.author.email }}" onclick="this.href=this.href.replace('@@','.')">Send email</a></li>
+            <li><a class="u-email" href="{{ site.author.email }}" onclick="this.href=this.href.replace('{{ site.author.email }}','mailto:{{ site.author.email }}')">Send email</a></li>
           {%- endif %}
         </ul>
       {%- endif %}
