--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -7,7 +7,7 @@ layout: default
     <ul>
         {% for post in site.tags[page.tag] %}
         <li>
-            <a href="{{ post.url }}">{{ post.title }}</a><br>
+            <a class="post-link" href="{{ post.url }}">{{ post.title }}</a><br>
             <p class="post-meta">
                 {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
                 <time class="dt-published" datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
