--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -25,7 +25,7 @@ layout: default
     <ul>
         {% for post in site.categories[page.category] %}
         <li>
-            <a href="{{ post.url }}">{{ post.title }}</a><br>
+            <a class="category-link" href="{{ post.url }}">{{ post.title }}</a><br>
             <p class="post-meta">
                 {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
                 <time class="dt-published" datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
