--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,6 +41,9 @@ layout: default
             </span>
           </div>
             {%- if site.show_excerpts -%}
+              <div class="post-excerpt-image">
+                <img alt="featured image" src="{{ page.image }}" width="1024"/>
+              </div>
               {{ post.excerpt }}
             {%- endif -%}
         </li>
