--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -115,19 +115,6 @@ a {
     font-size: 0.9em;
 }
 
-// .category-link {
-//     color: #fdfdfd;
-    
-//     &:visited {
-//         color: #fdfdfd;
-//     }
-    
-//     &:hover {
-//         color: #fdfdfd;
-//         text-decoration: none;
-//     }
-// }
-
 .category-link > code.highligther-rouge {
     background: $category-background-color;
 }
@@ -138,6 +125,10 @@ a {
 
 .post-list-header > h3 {
     margin-bottom: 5px;  
+}
+
+.post-excerpt-image {
+    padding: 0;
 }
 
 div.note, 
