Fixed excerpt post  image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@ layout: default
           </div>
             {%- if site.show_excerpts -%}
               <div class="post-excerpt-image">
-                <img alt="featured image" src="{{ page.image }}" width="1024"/>
+                <img alt="featured image" src="{{ post.image }}" width="1024"/>
               </div>
               {{ post.excerpt }}
             {%- endif -%}
