Fixed post.image margin style

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -129,7 +129,8 @@ a {
 
 .post-excerpt-image {
     padding: 0;
-    margin: 5px 0;
+    margin-top: 10px;
+    margin-bottom: 15px;
 }
 
 div.note, 
