--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,7 @@
         <!-- Include site description -->
         <h2>Need some help?</h2>
         <p>{{ site.description | escape }}</p>
+        <img alt="msc365 banner" src="https://msc365.eu/assets/img/mscollab365-aad-banner-300.png" width="200"/
       </div>
 
       <div class="footer-col">
