--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
         <!-- Include site description -->
         <h2>Need some help?</h2>
         <p>{{ site.description | escape }}</p>
-        <img alt="msc365 banner" src="https://msc365.eu/assets/img/mscollab365-aad-banner-300.png" width="200"/
+        <p><img alt="msc365 logo" src="https://msc365.eu/assets/img/mscollab365-aad-banner-300.png" width="200" /></p>
       </div>
 
       <div class="footer-col">
